# coolercontrol

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .prettierrc.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  COPYING.txt  COPYRIGHT.md  DEPRECATIONS.md  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  VISION.md  coolercontrol-liqctld.spec  coolercontrol.spec  coolercontrold.spec  coolero.py  pyproject.toml  shell.nix
coolercontrol/: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  address_wizard.cpp  address_wizard.h  addresswizard.cpp  addresswizard.h  app_instance.py  constants.h  coolercontrol-rc1.spec  coolercontrol.py  coolercontrol.spec  daemon.py  dbus_listener.h  ipc.cpp  ipc.h  main.cpp  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  metadata  mywebenginepage.h  notifier.cpp  notifier.h  pyproject.toml  settings.py  webpage.h
coolercontrol-gui/: Makefile  README.md  coolercontrol.py  pyproject.toml
coolercontrol-gui/coolercontrol/: __main__.py  app_instance.py  coolercontrol.py  settings.py  xdg.py
coolercontrol-gui/coolercontrol/config/: pytest.ini
coolercontrol-gui/coolercontrol/dialogs/: color_dialog.py  connection_failure_dialog.py  dialog_style.py  dialog_window.py  dialog_window_style.py  legacy_690_dialog.py  legacy_kraken2_firmware_dialog.py  thinkpad_enable_fan_control_dialog.py  thinkpad_enable_full_speed_dialog.py  udev_rules_dialog.py  update_dialog.py
coolercontrol-gui/coolercontrol/exceptions/: daemon_connection_error.py  device_communication_error.py  restart_needed.py
coolercontrol-gui/coolercontrol/models/: base_daemon.py  base_driver.py  channel_info.py  clipboard_buffer.py  device.py  device_info.py  device_layouts.py  init_status.py  lcd_mode.py  lighting_mode_widgets.py  saved_lcd_settings.py  saved_lighting_settings.py  saved_speed_settings.py  settings.py  speed_device_control.py  speed_options.py  speed_profile.py  status.py  temp_source.py
coolercontrol-gui/coolercontrol/repositories/: cpu_repo.py  daemon_repo.py  devices_repository.py  hwmon_repo.py  test_mocks.py  test_utils.py
coolercontrol-gui/coolercontrol/resources/: coolerod.py  settings.json
coolercontrol-gui/coolercontrol/services/: app_updater.py  device_commander.py  device_extractor.py  dynamic_buttons.py  notifications.py  settings_observer.py  shell_commander.py  sleep_listener.py  utils.py
coolercontrol-gui/coolercontrol/view_models/: device_observer.py  device_subject.py  devices_view_model.py  observer.py
coolercontrol-liqctld/: .gitignore  Makefile  README.md  coolercontrol-liqctld.py  coolercontrol-liqctld.service  coolercontrol-liqctld.spec  device_executor.py  device_service.py  models.py  pyproject.toml  requirements.txt  server.py  setup.cfg  setup.py  test_mocks.py  test_repo_ext.py  test_service_ext.py
coolercontrol-liqctld/coolercontrol_liqctld/: __init__.py  __main__.py  device_executor.py  device_service.py  liqctld.py  models.py  server.py  test_liqctld.py  test_mocks.py  test_service_ext.py  test_utils.py  testing.py
coolercontrol-liqctld/coolercontrol_liqctld/e2e_tests/: __init__.py  mocks.py  service_ext.py  utils.py
coolercontrol-ui/src-tauri/: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  build.rs  tauri.conf.json
coolercontrol-ui/src-tauri/capabilities/: default.json  main.json
coolercontrol-ui/src-tauri/icons/: icon.icns
coolercontrol-ui/src-tauri/src/: main.rs  port_finder.rs  single_instance.rs  tray.rs  webkit_adjustments.rs
coolercontrol/config/: 71-liquidctl.rules  mypy.ini  pylintrc
coolercontrol/dialogs/: hwmon_daemon_dialog.py  legacy_690_dialog.py  legacy_kraken2_firmware_dialog.py  quit_dialog.py  udev_rules_dialog.py  update_dialog.py
coolercontrol/icons/: icon.icns
coolercontrol/models/: base_daemon.py  channel_info.py  clipboard_buffer.py  device.py  device_info.py  device_layouts.py  lighting_device_control.py  lighting_mode.py  lighting_mode_widgets.py  saved_lcd_settings.py  saved_lighting_settings.py  saved_speed_settings.py  settings.py  speed_device_control.py  status_nvidia.py  temp_source.py
coolercontrol/repositories/: composite_repo.py  cpu_repo.py  devices_repository.py  gpu_repo.py  hwmon_daemon_client.py  hwmon_repo.py  liquidctl_repo.py  test_mocks.py  test_repo_ext.py  test_utils.py
coolercontrol/resources/: coolerod.py
coolercontrol/services/: app_updater.py  device_commander.py  device_extractor.py  dynamic_buttons.py  notifications.py  shell_commander.py  sleep_listener.py  speed_scheduler.py  utils.py
coolercontrol/services/dynamic_controls/: dynamic_controls_main.py  lcd_controls.py  lighting_controls.py  speed_controls.py
coolercontrol/services/liquidctl_device_extractors/: __init__.py  aquacomputer.py  aura_led.py  commander_core.py  commander_pro.py  corsair_hid_psu.py  h1v2.py  hydro_690_lc.py  hydro_platinum.py  hydro_pro.py  kraken_2.py  kraken_x3.py  (+8 more)
coolercontrol/src/: config.rs  device.rs  device_commander.rs  gui_server.rs  liqctld_client.rs  main.rs  repository.rs  setting.rs  status_updater.rs
coolercontrol/view_models/: device_observer.py  device_subject.py  devices_view_model.py  observer.py  subject.py
coolercontrold/: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  RUST_STYLE.md  buf.yaml  build.rs  coolercontrold-rc1.spec  coolercontrold.spec  man  resources  systemd
coolercontrold/.cargo/: audit.toml
coolercontrold/cc-detect/: Cargo.toml  README.md
coolercontrold/cc-image/: Cargo.toml
coolercontrold/cc-stress/: Cargo.toml  README.md
coolercontrold/daemon/: Cargo.toml  README.md  build.rs
coolercontrold/resources/: config-default.toml
coolercontrold/src/: admin.rs  alerts.rs  api_server.rs  config.rs  device.rs  device_commander.rs  gui_server.rs  lcd_processor.rs  lcd_scheduler.rs  logger.rs  main.rs  main_loop.rs  modes.rs  notifier.rs  setting.rs  settings_processor.rs  sleep_listener.rs  speed_processor.rs  speed_scheduler.rs  thinkpad_utils.rs  utils.rs
liqctld/: device_service.py  liqctld.py  models.py  pyproject.toml  server.py
(+1350 files in other folders)
