[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "coolero"
version = "0.6.5"
description = "Monitor and control your cooling and other devices"
authors = ["Guy Boldon <gb@guyboldon.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
repository = "https://gitlab.com/codifryed/coolero"
homepage = "https://gitlab.com/codifryed/coolero"
keywords = []
packages = [ { include = "coolero", from = "" } ]

[tool.poetry.urls]
issues = "https://gitlab.com/codifryed/coolero/-/issues"

[tool.poetry.dependencies]
python = "~=3.9.5"
# 6.2.2 (shiboken) causes issues with pylint and mypy
pyside6 = "==6.2.3"
apscheduler = "==3.8.1"
# tzlocal 4.0 (dependency of apscheduler) throws lots of warnings. Holding back for now but apscheduler 4.0 will fix it.
tzlocal = "==2.1"
matplotlib = "==3.5.1"
numpy = "==1.22.2"
liquidctl = "==1.8.1"
psutil = "==5.9.0"
types-psutil = "==5.8.20"
pyamdgpuinfo = "==2.1.1"
setproctitle = "==1.2.2"
jeepney = "==0.7.1"
# Build dependencies:
# Nuitka also has the following system dependencies:  gcc, ccache, chrpath, patchelf
nuitka = "==0.6.19.6"

[tool.poetry.dev-dependencies]
mypy = "==0.931"
pytest = "==7.0.0"
#pytest_mock = "==3.6.1"
#pytest-randomly = "==3.10.3"
#pytest-sugar = "==0.9.4"
#pytest-xdist = "==2.5.0"
#pytest-qt = "==4.0.2"
pylint = "==2.12.2"

[tool.poetry.scripts]
coolero = "coolero.scripts:coolero"
lint = "coolero.scripts:lint"
test = "coolero.scripts:test"
build = "coolero.scripts:build"
build-one-file = "coolero.scripts:build_one_file"
