[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "coolero"
version = "0.11.1"
description = "Monitor and control your cooling and other devices"
authors = ["Guy Boldon <gb@guyboldon.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
repository = "https://gitlab.com/coolero/coolero"
homepage = "https://gitlab.com/coolero/coolero"
keywords = []
packages = [{ include = "coolero", from = "" }]

[tool.poetry.urls]
issues = "https://gitlab.com/coolero/coolero/-/issues"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pyside6_essentials = "==6.3.1"
apscheduler = "==3.9.1"
matplotlib = "==3.5.2"
numpy = "==1.22.4"
liquidctl = "==1.9.1"
psutil = "==5.9.1"
types-psutil = "==5.8.23"
pyamdgpuinfo = "==2.1.2"
setproctitle = "==1.2.3"
jeepney = "==0.8.0"

[tool.poetry.dev-dependencies]
# Nuitka also has the following system dependencies when building:  gcc, ccache, chrpath, patchelf
nuitka = "0.8.4"
mypy = "==0.961"
pytest = "==7.1.2"
#pytest_mock = "==3.6.1"
#pytest-randomly = "==3.10.3"
#pytest-sugar = "==0.9.4"
#pytest-xdist = "==2.5.0"
#pytest-qt = "==4.0.2"
pylint = "==2.14.3"

[tool.poetry.scripts]
coolero = "coolero.app:main"
coolerod = "coolero.daemon:start_system_daemon"
