[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "coolero"
version = "0.12.9"
description = "Monitor and control your cooling and other devices"
authors = ["Guy Boldon <gb@guyboldon.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
repository = "https://gitlab.com/coolero/coolero"
homepage = "https://gitlab.com/coolero/coolero"
keywords = []
packages = [{ include = "coolero", from = "" }]

[tool.poetry.urls]
issues = "https://gitlab.com/coolero/coolero/-/issues"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pyside6_essentials = "==6.3.2"
apscheduler = "==3.9.1"
matplotlib = "==3.6.1"
numpy = "==1.23.4"
liquidctl = { git = "https://github.com/liquidctl/liquidctl.git", branch = "main"}
psutil = "==5.9.2"
types-psutil = "==5.9.5.1"
pyamdgpuinfo = "==2.1.3"
setproctitle = "==1.3.2"
jeepney = "==0.8.0"

[tool.poetry.dev-dependencies]
# Nuitka also has the following system dependencies when building:  gcc, ccache, chrpath, patchelf
nuitka = "==1.1.3"
mypy = "==0.982"
pytest = "==7.1.3"
#pytest_mock = "==3.6.1"
#pytest-randomly = "==3.10.3"
#pytest-sugar = "==0.9.4"
#pytest-xdist = "==2.5.0"
#pytest-qt = "==4.0.2"
pylint = "==2.15.4"

[tool.poetry.scripts]
coolero = "coolero.app:main"
coolerod = "coolero.daemon:start_system_daemon"
