[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "coolercontrol"
version = "0.17.2"
description = "Monitor and control your cooling and other devices"
authors = ["Guy Boldon <gb@guyboldon.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
repository = "https://gitlab.com/coolercontrol/coolercontrol"
homepage = "https://gitlab.com/coolercontrol/coolercontrol"
keywords = []
packages = [{ include = "coolercontrol", from = "" }]

[tool.poetry.urls]
issues = "https://gitlab.com/coolercontrol/coolercontrol/-/issues"

[tool.poetry.dependencies]
python = ">=3.9, <=3.12"
pyside6_essentials = "==6.6.1"
apscheduler = "==3.10.4"
matplotlib = "==3.8.2"
numpy = "==1.26.2"
setproctitle = "==1.3.3"
jeepney = "==0.8.0"
requests = "==2.31.0"
dataclass-wizard = "==0.22.2"

[tool.poetry.dev-dependencies]
# Poetry and build are required for building the wheel package for some distributions
#poetry = "1.3.1"
#build = "0.9.0"
# Nuitka also has the following system dependencies when building:  gcc, ccache, chrpath, patchelf
nuitka = "==1.9.5"

[tool.poetry.scripts]
coolercontrol = "coolercontrol.coolercontrol:main"