[build-system]
requires = [
    "setuptools >= 46.4",
]
build-backend = "setuptools.build_meta"

[project]
name = "coolercontrol_liqctld"
version = "0.17.1"
authors = [{ name = "Guy Boldon", email = "gb@guyboldon.com" }]
description = "Monitor and control your cooling and other devices"
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
requires-python = ">=3.9"
dependencies = [
    "liquidctl",
    "setproctitle",
    "fastapi",
    "uvicorn",
    "orjson",
]

[project.urls]
Homepage = "https://gitlab.com/coolercontrol/coolercontrol"
Repository = "https://gitlab.com/coolercontrol/coolercontrol"
Documentation = "https://gitlab.com/coolercontrol/coolercontrol/-/wikis/home"
Issues = "https://gitlab.com/coolercontrol/coolercontrol/-/issues"
Changelog = "https://gitlab.com/coolercontrol/coolercontrol/-/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["coolercontrol_liqctld*"]
namespaces = false

[project.scripts]
coolercontrol-liqctld = "coolercontrol_liqctld.liqctld:main"
