[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "coolercontrol_liqctld"
version = "0.17.3"
description = "Monitor and control your cooling and other devices"
authors = ["Guy Boldon <gb@guyboldon.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
repository = "https://gitlab.com/coolercontrol/coolercontrol"
homepage = "https://gitlab.com/coolercontrol/coolercontrol"
keywords = []
packages = [{ include = "coolercontrol_liqctld", from = ""}]

[tool.poetry.urls]
issues = "https://gitlab.com/coolercontrol/coolercontrol/-/issues"

[tool.poetry.dependencies]
python = ">=3.9, <=3.12"
liquidctl = "==1.13.0"
setproctitle = "==1.3.3"
fastapi = "==0.104.1"
uvicorn = "==0.24.0"
orjson = "==3.9.10"

[tool.poetry.dev-dependencies]
# Nuitka also has the following system dependencies when building:  gcc, ccache, chrpath, patchelf
nuitka = "==1.8.6"

[tool.poetry.scripts]
coolercontrol-liqctld = "coolercontrol_liqctld.liqctld:main"