# still needed for debian packaging
[metadata]
name = coolercontrol_liqctld
version = 1.4.5
author = Guy Boldon
author_email = gb@guyboldon.com

project_urls =
  Homepage = https://gitlab.com/coolercontrol/coolercontrol
  Repository = https://gitlab.com/coolercontrol/coolercontrol
  Documentation = https://gitlab.com/coolercontrol/coolercontrol/-/wikis/home
  Issues = https://gitlab.com/coolercontrol/coolercontrol/-/issues
  Changelog = https://gitlab.com/coolercontrol/coolercontrol/-/blob/main/CHANGELOG.md
  Source = https://gitlab.com/coolercontrol/coolercontrol
  
[options]
include_package_data = False
packages = find:
python_requires = >=3.9
install_requires =
  liquidctl
  setproctitle
  fastapi
  uvicorn

[options.packages.find]
exclude = coolercontrol_liqctld.e2e_tests*
namespaces = False

[options.entry_points]
console_scripts =
  coolercontrol-liqctld = coolercontrol_liqctld.liqctld:main
