[package]
name = "coolercontrol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
systemd-journal-logger = "0.5.1"
clap = { version = "4.0.28", features = ["derive"] }  # Command line argument parser
anyhow = "1.0.66"
tokio = { version = "1.22.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.8.1", features = ["signal"] }  # to complex for our current impl
tokio-graceful-shutdown = "0.11.1"
async-trait = "0.1.58"
actix-web = "4.2.1"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
zbus = "3.5.0"  # our preferred DBus lib
sysinfo = { version = "0.26.8", default-features = false }  # gets detailed system info
chrono = { version = "0.4.23", features = ["serde"] }  # We use timestamps in our status history
strum = { version = "0.24.1", features = ["derive"] }  # Enum -> String
regex = "1.7.0"
lazy_static = "1.4.0"  # allows us for ex to complile regex expression once in a function.
heck = "0.4.0"  # hanldes case conversion like CamelCase and Title Case.
signal-hook = "0.3.14"
const_format = "0.2.30"  # allows combining string constants
psutil = { version = "3.2.2", default-features = false, features = ["cpu", "sensors"] }  # for cpu stats
nu-glob = "0.71.0"
sha2 = "0.10.6"
toml_edit = "0.15.0"

[dev-dependencies]
test-context = "0.1.4"
#rstest = "0.15.0"  # possibility for the future
uuid = "1.2.2"

[profile.release]
lto = "thin"
codegen-units = 1
