[package]
name = "coolercontrold"
version = "1.4.5"
authors = ["Guy Boldon <gb@guyboldon.com>"]
edition = "2021"
# MSRV for all included libraries
rust-version = "1.81"
description = "Monitor and control your cooling and other devices"
documentation = "https://gitlab.com/coolercontrol/coolercontrol/-/wikis/home"
readme = "README.md"
homepage = "https://gitlab.com/coolercontrol/coolercontrol"
repository = "https://gitlab.com/coolercontrol/coolercontrol"
license = "GPL-3.0-or-later"

[dependencies]
log = "0.4.22"
env_logger = "0.11.5"
systemd-journal-logger = "2.2.0"
clap = { version = "4.5.23", features = [
  "derive",
] } # Command line argument parser
anyhow = "1.0.94"
derive_more = "1.0.0"
tokio = { version = "1.42.0", default-features = false, features = [
  "rt",
  "fs",
  "macros",
  "parking_lot",
  "time",
  "sync",
  "signal",
  "net",
  "io-std",
  "io-util",
] }
tokio-graceful-shutdown = "0.15.2"
async-trait = "0.1.83"
actix-web = "4.9.0"
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
actix-web-static-files = { version = "4.0.1", default-features = false }
actix-session = { version = "0.10.1", features = ["cookie-session"] }
http-auth-basic = "0.3.5"
static-files = { version = "0.2.4", default-features = false }
mime = "0.3.17"
hyper = { version = "1.5.1", default-features = false, features = [
  "http1",
  "client",
] }
hyper-util = { version = "0.1.10", default-features = false, features = [
  "client",
  "http1",
  "tokio",
] }
http-body-util = "0.1.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
zbus = { version = "5.1.1", default-features = false, features = [
  "tokio",
] } # our preferred DBus lib
sysinfo = { version = "0.33.0", default-features = false, features = [
  "system",
] } # gets detailed system info
chrono = { version = "0.4.38", features = [
  "serde",
] } # We use timestamps in our status history
strum = { version = "0.26.3", features = ["derive"] } # Enum -> String
regex = "1.10.6"
lazy_static = "1.5.0" # allows us for ex to complile regex expression once in a function.
cached = { version = "0.54.0", default-features = false, features = [
  "proc_macro",
  "ahash",
  "async",
] }
heck = "0.5.0" # hanldes case conversion like CamelCase and Title Case.
signal-hook = "0.3.17"
const_format = "0.2.34" # allows combining string constants
psutil = { version = "3.3.0", default-features = false, features = [
  "cpu",
  "sensors",
] } # for cpu stats
nu-glob = "0.100.0"
# use official version once fan control is merged, otherwise use our fork:
nvml-wrapper = { git = "https://github.com/codifryed/nvml-wrapper", branch = "coolercontrol" }
sha2 = "0.10.8"
toml_edit = "0.22.22"
nix = { version = "0.29.0", default-features = false, features = [
  "user",
  "signal",
  "process",
  "sched",
] }
pciid-parser = "0.7.2"
libdrm_amdgpu_sys = "0.7.6"
yata = "0.7.0" # moving averages
tiny-skia = "0.11.4" # vector image creation
ril = { version = "0.10.3", default-features = false, features = [
  "png",
  "text",
] } # Text rendering on image
image = { version = "0.25.5", default-features = false, features = [
  "rayon",
  "gif",
  "jpeg",
  "ico",
  "png",
  "tiff",
  "bmp",
  "webp",
] } # image processing
gifski = { version = "1.32.0", default-features = false, features = [
  "gifsicle",
] } # gif processing
imgref = "1.11.0" # for gif processing
rgb = "0.8.50" # for gif processing
uuid = { version = "1.11.0", features = ["v4"] }

[build-dependencies]
static-files = { version = "0.2.4", default-features = false }

[dev-dependencies]
test-context = "0.3.0"
tempfile = "3.14.0"
#rstest = "0.15.0"  # possibility for the future

[profile.release]
strip = "symbols"
opt-level = 3
lto = "fat"
codegen-units = 1

[lints.clippy]
upper_case_acronyms = "allow"
type_complexity = "allow"
too_many_arguments = "allow"
doc_lazy_continuation = "allow"
