[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "liqctld"
version = "0.1.0"
description = "Monitor and control your cooling and other devices"
authors = ["Guy Boldon <gb@guyboldon.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
repository = "https://gitlab.com/coolero/coolercontrol"
homepage = "https://gitlab.com/coolero/coolercontrol"
keywords = []
#packages = [{ include = "liqctld", from = "" }]

[tool.poetry.urls]
issues = "https://gitlab.com/coolero/coolercontrol/-/issues"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
liquidctl = "==1.11.1"
setproctitle = "==1.3.2"
fastapi = "==0.85.1"
uvicorn = "==0.19.0"
orjson = "==3.8.1"

[tool.poetry.dev-dependencies]
# Nuitka also has the following system dependencies when building:  gcc, ccache, chrpath, patchelf
nuitka = "==1.1.7"
pytest = "==7.2.0"

[tool.poetry.scripts]
liqctld = "liqctld:main"
