[package]
name = "coolercontrol"
version = "1.4.5"
authors = ["Guy Boldon <gb@guyboldon.com>"]
edition = "2021"
# MSRV for all included libraries
rust-version = "1.81"
description = "Monitor and control your cooling and other devices"
documentation = "https://gitlab.com/coolercontrol/coolercontrol/-/wikis/home"
readme = false
homepage = "https://gitlab.com/coolercontrol/coolercontrol"
repository = "https://gitlab.com/coolercontrol/coolercontrol"
license = "GPL-3.0-or-later"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
rand = "0.8.5"
tauri = { version = "2.1.1", features = [
  "tray-icon",
  "image-ico",
  "image-png",
] }
tauri-plugin-cli = "2.0.1"
tauri-plugin-clipboard-manager = "2.0.2"
tauri-plugin-shell = "2.0.2"
# this allows the production build to access http://localhost:
tauri-plugin-localhost = "2.1.0"
tauri-plugin-store = "2.1.0"
tauri-plugin-window-state = "2.0.2"
# These should follow the versions Tauri uses:
glib = "=0.18.5"
gtk = "=0.18.1"
gdk = "=0.18.0"
zbus = "=4.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = "symbols"
opt-level = 3
lto = "fat"
codegen-units = 1

[lints.clippy]
upper_case_acronyms = "allow"
type_complexity = "allow"
too_many_arguments = "allow"
doc_lazy_continuation = "allow"
