[package]
name = "coolercontrol"
version = "1.4.5"
authors = ["Guy Boldon <gb@guyboldon.com>"]
edition = "2021"
# MSRV for all included libraries
rust-version = "1.81"
readme = "../README.md"
categories = ["hardware-support"]
keywords = ["temperature", "hardware", "cooling", "fan", "monitor"]
description = "Monitor and control your cooling and other devices"
documentation = "https://gitlab.com/coolercontrol/coolercontrol/-/wikis/home"
homepage = "https://gitlab.com/coolercontrol/coolercontrol"
repository = "https://gitlab.com/coolercontrol/coolercontrol"
license = "GPL-3.0-or-later"

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }
rand = "0.8.5"
notify-rust = "4.11.4"
# same version as reqwest-eventsource:
reqwest = { version = "0.12.12", default-features = false, features = [
  "charset",
  "cookies",
  "json",
  "stream",
] }
reqwest-eventsource = "0.6.0"
tauri = { version = "2.2.3", features = [
  "tray-icon",
  "image-ico",
  "image-png",
  #"devtools",
] }
tauri-plugin-cli = "2.2.0"
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-shell = "2.2.0"
# this allows the production build to access http://localhost:
tauri-plugin-localhost = "2.2.0"
tauri-plugin-store = "2.2.0"
tauri-plugin-window-state = "2.2.1"
tauri-plugin-dialog = "2.2.0"
zbus = { version = "5.3.1", features = ["blocking-api"] }
# These should follow the versions Tauri uses:
glib = "=0.18.5"
gtk = "=0.18.1"
gdk = "=0.18.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = "symbols"
opt-level = 3
lto = "fat"
codegen-units = 1

[lints.clippy]
upper_case_acronyms = "allow"
type_complexity = "allow"
too_many_arguments = "allow"
doc_lazy_continuation = "allow"
